test/asm/const-zero.asm
SECTION "Test", ROM0

Floating:
	println Floating * 0
	println Floating & 0
	println 0 * Floating
	println 0 & Floating
	println Floating * 1 ; Not constant
